# daily-water-tracker-agent

./: .gitignore  README.md  pyproject.toml  requirements.lock.txt
src/: agent.py  dashboard.py  database.py  logger.py
src/api/: main.py  router.py
